# DataAnalysis

./: Base  Data  Final  New  Template  Updated  formula  highlight  jupyLoop.ipynb  loopScript.py  macro  main.py  myPython.ipynb  naya  newLoop.py  newfile  pyproject.toml
.ipynb_checkpoints/: jupyLoop-checkpoint.ipynb
