[project]
name = "dataanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.1.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "ruff>=0.12.3",
]
